# Quilt

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_RUN_DEV.md  LICENSE-APACHE  LICENSE-MIT  PLANNING_FEATURE_RESEARCH.md  PLANNING_IMPLEMENTATION.md  PLANNING_INCREMENTAL_RERUN.md  PLANNING_ML_DL.md  PLANNING_VIZ_PROFILER_COPILOT.md  Quilt.icns  README.md  ROADMAP-v1.0.0-IMPLEMENTATION.md  ROADMAP-v1.0.0-REMAINING.md  SPONSORS.md  build.cmd  dev.cmd  dev.ps1  make-icons.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: ai_chat.rs  ci_status.rs  dbt_engine.rs  engine_manager.rs  lib.rs  llama_chat.rs  main.rs  secrets.rs  update_check.rs  workspace_git.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: csv.rs  lib.rs
crates/duckdb-engine/: Cargo.toml
crates/duckdb-engine/examples/: oracle_repro.rs
crates/duckdb-engine/src/: connectors.rs  error_category.rs  history.rs  lib.rs  ml.rs  plan.rs  run_log.rs  stats.rs  tls.rs  util.rs  watermark.rs
crates/duckdb-engine/src/plan/: builders.rs  graph.rs  mod.rs  specs.rs  stage_cache.rs  tests.rs
crates/duckdb-engine/tests/: execution.rs
crates/duckle-mcp/: catalog.json
crates/duckle-mcp/src/: tools.rs
crates/duckle-runner/src/: build.rs  main.rs
crates/execution-core/: Cargo.toml
crates/execution-core/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/quilt-mcp/: Cargo.toml  catalog.json
crates/quilt-mcp/src/: catalog.rs  main.rs  tools.rs
crates/quilt-runner/: Cargo.toml
crates/quilt-runner/src/: build.rs  context.rs  main.rs  selfextract.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: firing.rs
crates/stream-engine/: Cargo.toml
crates/stream-engine/src/: lib.rs
crates/transform-engine/: Cargo.toml
crates/transform-engine/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
docs/: ROADMAP-IDEAS.md  multi-workspace-qa-checklist.md  roadmap.md  talend-ui-research.md
docs/current/: architecture.md  connectors.md  engines.md  getting-started.md  index.md  installation.md  mcp.md  scheduler.md  transforms.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: build-catalog.mjs  export-catalog.ts  gen-brand-icons.mjs
frontend/src/: App.tsx  UpdateBanner.tsx  ai-provider.test.ts  ai-provider.ts  ai-settings.test.ts  ai-settings.ts  clipboard.ts  main.tsx  node-subtitle.ts  persistence.ts  pipeline-types.ts  repo-types.ts  run-resolve.test.ts  run-resolve.ts  schema-resolve.ts  styles.css  tauri-bridge.ts  tauri-dialog.ts  tauri-io.ts  theme.tsx  validation.ts  vite-env.d.ts  workspace-ns.test.ts  workspace-ns.ts  workspace.test.ts  workspace.ts
frontend/src/canvas/: Canvas.tsx  ConnectionTypePicker.tsx  DuckleEdge.tsx  EdgeEditorModal.tsx  QuickAddSearch.tsx  QuiltEdge.tsx  VisualMapperModal.tsx  connection-types.ts  profile-overlay.test.ts  profile-overlay.ts  run-status-context.ts
frontend/src/canvas/nodes/: DuckleNode.tsx  QuiltNode.tsx  SinkNode.tsx  SourceNode.tsx  TransformNode.tsx
frontend/src/i18n/: LanguageSelector.tsx  README.md  index.ts  languages.ts
frontend/src/i18n/locales/: af.json  ar.json  az.json  bg.json  bn.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  ga.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  kk.json  km.json  ko.json  lt.json  lv.json  mn.json  mr.json  ms.json  my.json  ne.json  nl.json  no.json  pa.json  pl.json  (+20 more)
frontend/src/workflow-ui/: BackfillModal.tsx  BottomPanel.tsx  BuildPipelineModal.tsx  ChatPanel.tsx  CiStatusBadge.tsx  ComponentIcon.tsx  ContextMenu.tsx  EditorHeader.tsx  EditorTabs.tsx  EngineSelector.tsx  EngineSetupModal.tsx  GitPanel.tsx  LeftSidebar.tsx  LineagePanel.tsx  McpModal.tsx  NewPipelineModal.tsx  Palette.tsx  PlanView.tsx  ProjectTree.tsx  PropertiesPanel.tsx  QuiltLogo.tsx  RunHistoryView.tsx  RunView.tsx  ScheduleEditorModal.tsx  SchemaEditor.tsx  SettingsPage.tsx  StatusBar.tsx  Tooltip.tsx  VizChart.tsx  WindowControls.tsx  WorkspacePickerModal.tsx  agent-guardrails.test.ts  agent-guardrails.ts  agent-loop.test.ts  agent-loop.ts  agent-skills.test.ts  agent-skills.ts  brand-icons.generated.ts  chat-history.test.ts  chat-history.ts  (+19 more)
frontend/src/workflow-ui/fields/: AggregationsField.tsx  types.ts  (+10 more)
house-price-demo/: quilt.json
marketing/promo/: build-v02.sh  build.sh  edit-whatsnew.sh
research/: text-mining-association-rules.md
samples/: orders.csv  regions.csv
scripts/: i18n-fill.py  i18n-overrides.py  i18n-translate.py  render_icon.py
