[package]
name = "duckle-desktop"
description = "Duckle Tauri 2 desktop shell."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "duckle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "duckle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
duckle-runtime = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
duckle-connectors = { workspace = true }
duckle-duckdb-engine = { workspace = true }
