[package]
name = "quilt-connectors"
description = "Quilt source and sink connectors."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
csv = "1.3"
encoding_rs = "0.8"
quilt-metadata = { workspace = true }
quilt-plugin-sdk = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["macros"] }
