[package]
name = "quilt-plugin-sdk"
description = "Public Rust SDK for building Quilt connectors, transforms, and engines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
quilt-metadata = { workspace = true }
