[package]
name = "quilt-stream-engine"
description = "Streaming and incremental execution for Quilt pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
