[package]
name = "quilt-workflow-engine"
description = "DAG model, validation, and topological scheduling for Quilt pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
